fix: :bug: z-index cards

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -16,5 +16,10 @@
     font-family: 'Onest Variable', sans-serif;
     color: white;
 
+    border: 1px dashed var(--border-color);
+}
+
+.react-draggable {
     border: 1px solid var(--border-color);
+    z-index: 1;
 }
